fix for footer nav on mobile

--- a/src/app/components/footer/footer.queries.css
+++ b/src/app/components/footer/footer.queries.css
@@ -9,7 +9,7 @@
 */
 @media (max-width: 44em) {
   .grid--col-4 {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 40fr 60fr;
     column-gap: 0;
   }
 
@@ -27,24 +27,21 @@
     width: 2.8rem;
   }
   .newsletter-container {
-    grid-column: span 4;
+    grid-column: span 2;
     grid-row: 2;
     margin: 0 4.8rem;
   }
   .info {
-    grid-column: span 4;
+    grid-column: span 2;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     gap: 2.4rem;
   }
   .links {
-    grid-column: span 1.5;
     grid-row: 1;
   }
   .touch {
-    grid-column: 3;
-    grid-column: span 2.5;
     grid-row: 1;
   }
 }
